# innovator-agent

./: .env.example  README.md  main.py  package-lock.json  pyproject.toml  run.py
backend/: .env.example  README.md  pyproject.toml
backend/src/: document_analyzer.py  document_processor.py  main.py  patent_loader.py  publication_loader.py
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.ts
frontend/src/: index.css
frontend/src/components/analysis/: NoveltyPanel.tsx  TimelineChart.tsx  TopAuthors.tsx
frontend/src/components/filters/: FilterBar.tsx
frontend/src/components/input/: SearchForm.tsx
frontend/src/components/results/: AbstractViewer.tsx  EditAbstractDialog.tsx  FiltersDrawer.tsx  HeaderStrip.tsx  InsightsPanel.tsx  ResearchCard.tsx  ResultRow.tsx  ResultsLayout.tsx  ResultsTabs.tsx  ResultsToolbar.tsx
frontend/src/components/sidebar/: AnalysisSidebar.tsx  MobileSidebar.tsx
frontend/src/components/voice/: VoiceChat.tsx
frontend/src/hooks/: useAnalysisHistory.ts  useLocalStorage.ts  useSearchResults.ts  useUIState.ts
frontend/src/lib/: api.ts  utils.ts
frontend/src/pages/: Index.tsx
frontend/src/types/: analysis.ts  research.ts
src/: app.py  document.py  document_analyzer.py  document_finder.py  document_loader.py  document_processor.py  document_types.py  main.py  models.py  patent_loader.py  publication_loader.py  testing_finder.py  types.py
